...
              ElevatedButton(
                onPressed: () => controller.addReport(
                  controller.nameC.text,
                  controller.alamatC.text,
                  controller.patokanC.text,
                ),
                child: Text('LAPORKAN!'),
                style: ElevatedButton.styleFrom(backgroundColor: Colors.red),
              ),
            ],
          ),
        ),
      ),
...
