...
            Center(
              child: ElevatedButton(
                onPressed: () {
                  _formKey.currentState?.save();
                  RegisterPageController().daftar(email, pass);
                },
                child: const Text('Daftar'),
              ),
            ),
            const SizedBox(
              height: 15,
            ),
            Row(
...
